# protoc-gen-validate

./: BUILD  Dockerfile  Gopkg.toml  Makefile  README.md  main.go
bazel/: pgv_proto_library.bzl
gogoproto/: BUILD.bazel
java/: pom.xml
java/pgv-java-validation/src/main/java/com/lyft/pgv/: BUILD
java/pgv-java-validation/src/main/java/com/lyft/pgv/validation/: BUILD
module/: BUILD  checker.go  validate.go
templates/: BUILD.bazel  pkg.go
templates/cc/: BUILD.bazel  register.go
templates/go/: BUILD.bazel  duration.go  register.go  timestamp.go
templates/gogo/: BUILD.bazel  register.go
templates/goshared/: BUILD.bazel  any.go  bytes.go  const.go  duration.go  enum.go  in.go  known.go  ltgt.go  map.go  message.go  register.go  repeated.go  string.go  timestamp.go
templates/java/: BUILD.bazel  register.go
templates/shared/: BUILD.bazel  context.go  disabled.go  functions.go  well_known.go
tests/harness/: BUILD
tests/harness/cases/: BUILD
tests/harness/cases/other_package/: BUILD
tests/harness/executor/: BUILD  cases.go  harness.go  worker.go
tests/harness/go/main/: BUILD  harness.go
tests/harness/gogo/main/: BUILD  harness.go
tests/harness/java/: BUILD
