load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "duration.go",
        "file.go",
        "register.go",
        "required.go",
        "timestamp.go",
    ],
    importpath = "github.com/lnnujxxy/protoc-gen-validate/templates/gogo",
    visibility = ["//visibility:public"],
    deps = [
        "//templates/goshared:go_default_library",
        "//vendor/github.com/lnnujxxy/protoc-gen-star:go_default_library",
    ],
)
